ghc-4335c07/testsuite/tests/partial-sigs/should_fail/WildcardInTypeFamilyInstanceRHS.stderr

WildcardInTypeFamilyInstanceRHS.hs:8:25: error:
    Wildcard ‘_’ not allowed
      in the declaration for type synonym ‘Dual’
